--- a/ervin/templates/plain.html
+++ b/ervin/templates/plain.html
@@ -1,8 +1,9 @@
 <html>
-<head>
-  <title>{% block title %}Ervin{% endblock %}</title>
-</head>
-<html>
-{% block content %}
-{% endblock %}
+  <head>
+    <title>{% block title %}Ervin{% endblock %}</title>
+  </head>
+  <body>
+    {% block content %}
+    {% endblock %}
+  </body>
 </html>
