add Concept before concept name

--- a/ervin/templates/concept.html
+++ b/ervin/templates/concept.html
@@ -1,7 +1,7 @@
 {% extends "plain.html" %}
 {% load catalog %}
-{% block title %}{{ concept }}{% endblock %}
+{% block title %}Concept: {{ concept }}{% endblock %}
 {% block content %}
 
-<p>{{ concept }}</p>
+<p>Concept: {{ concept }}</p>
 {% endblock %}
