--- a/ervin/templates/person_list.html
+++ b/ervin/templates/person_list.html
@@ -1,6 +1,6 @@
 {% extends "plain.html" %}
 {% load catalog %}
-{% block title %}{{person}}{% endblock %}
+{% block title %}Persons{% endblock %}
 {% block content %}
 
 <ul>
