--- a/ervin/templates/plain.html
+++ b/ervin/templates/plain.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>{% block title %}Ervin{% endblock %}</title>
+    <link rel="unapi-server" type="application/xml"
+          title="unAPI" href="/unapi" />
   </head>
   <body>
     {% block content %}
