add work list view

--- a/ervin/templates/home.html
+++ b/ervin/templates/home.html
@@ -5,5 +5,7 @@
 
 <ul>
 <li><a href="/persons">Persons</a></li>
+<li><a href="/works">Works</a></li>
+<li><a href="/place">Place</a></li>
 </ul>
 {% endblock %}
