--- a/ervin/templates/home.html
+++ b/ervin/templates/home.html
@@ -6,6 +6,6 @@
 <ul>
 <li><a href="/persons">Persons</a></li>
 <li><a href="/works">Works</a></li>
-<li><a href="/place">Place</a></li>
+<li><a href="/places">Places</a></li>
 </ul>
 {% endblock %}
