--- a/ervin/templates/person_list.html
+++ b/ervin/templates/person_list.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <ul>
-{% for person in persons %}
+{% for person in person_list %}
 <li><a href="{{ person.get_absolute_url }}">{{ person }}</a>
 </li>
 {% endfor %}
