add all new top level links to home

--- a/ervin/templates/home.html
+++ b/ervin/templates/home.html
@@ -4,8 +4,17 @@
 {% block content %}
 
 <ul>
-<li><a href="/persons">Persons</a></li>
+<h1>Group 1</h1>
 <li><a href="/works">Works</a></li>
+
+<h1>Group 2</h1>
+<li><a href="/organizations">Organization</a></li>
+<li><a href="/persons">Persons</a></li>
+
+<h1>Group 3</h1>
+<li><a href="/concepts">Concepts</a></li>
+<li><a href="/events">Events</a></li>
+<li><a href="/objects">Objects</a></li>
 <li><a href="/places">Places</a></li>
 </ul>
 {% endblock %}
