--- a/ervin/templates/bib_work_list.html
+++ b/ervin/templates/bib_work_list.html
@@ -2,6 +2,6 @@
 
 <ul>
   {% for work in work_list %}
-    <li>{% autoescape off %}{% include "document_bib.html" %}{% endautoescape %}</li>
+    <li>{% autoescape off %}{% include "bib_work.html" %}{% endautoescape %}</li>
   {% endfor %}
 </ul>
