rename catalog templatetags to ervin

--- a/ervin/templates/bib_work.html
+++ b/ervin/templates/bib_work.html
@@ -1,4 +1,4 @@
-{% load catalog %}
+{% load ervin %}
 {% if person %}
   {{ work.authors.all|inverted_name_first_list_linked:person.noid|with_final_period }}
 {% else %}
