--- a/ervin/templates/object.html
+++ b/ervin/templates/object.html
@@ -1,5 +1,5 @@
 {% extends "plain.html" %}
-{% load catalog %}
+{% load ervin %}
 {% block title %}Object: {{ frbrobject }}{% endblock %}
 {% block content %}
 
