--- a/ervin/templates/onlineedition.html
+++ b/ervin/templates/onlineedition.html
@@ -1,5 +1,5 @@
 {% extends "plain.html" %}
-{% load catalog %}
+{% load ervin %}
 {% block title %}Online edition: {{ onlineedition.get_title }}{% endblock %}
 {% block content %}
 <abbr class="unapi-id" title="{{ onlineedition.pk }}"/>
