--- a/ervin/templates/physicaledition.html
+++ b/ervin/templates/physicaledition.html
@@ -1,5 +1,5 @@
 {% extends "plain.html" %}
-{% load catalog %}
+{% load ervin %}
 {% block title %}Physical edition: {{ physicaledition.get_title }}{% endblock %}
 {% block content %}
 <abbr class="unapi-id" title="{{ physicaledition.pk }}"/>
