--- a/ervin/templates/concept.html
+++ b/ervin/templates/concept.html
@@ -1,5 +1,5 @@
 {% extends "plain.html" %}
-{% load catalog %}
+{% load ervin %}
 {% block title %}Concept: {{ concept }}{% endblock %}
 {% block content %}
 
