--- a/ervin/templates/organization.html
+++ b/ervin/templates/organization.html
@@ -1,5 +1,5 @@
 {% extends "plain.html" %}
-{% load catalog %}
+{% load ervin %}
 {% block title %}Organization: {{ organization }}{% endblock %}
 {% block content %}
 
