--- a/ervin/templates/edition_bib.html
+++ b/ervin/templates/edition_bib.html
@@ -11,6 +11,6 @@
 {% endif %}
 <abbr class="unapi-id" title="{{ edition.work.slug }}"/>
 {{ edition.publisher|with_terminal:":" }}
-{{ edition.date|with_terminal:"." }}
+{{ edition.date|date:"j F Y"|with_terminal:"." }}
 {{ edition.description|with_terminal:"." }}
 
