--- a/ervin/templates/edition_bib.html
+++ b/ervin/templates/edition_bib.html
@@ -5,12 +5,13 @@
 
 {{ edition.authors.all|inverted_name_first_list_linked|with_terminal:"." }}
 {% if edition_nolink %}
-  <cite>{{ edition.get_title }}</cite>.
+  <cite>{{ edition.title }}</cite>.
 {% else %}
-  <a href="{{edition.get_absolute_url}}"><cite>{{edition.get_title}}</cite></a>.
+  <a href="{{edition.get_absolute_url}}"><cite>{{edition.title}}</cite></a>.
 {% endif %}
 <abbr class="unapi-id" title="{{ edition.work.slug }}"/>
 {{ edition.publisher|with_terminal:":" }}
+
 {{ edition.date|date:"j F Y"|with_terminal:"." }}
 {{ edition.description|with_terminal:"." }}
 
