add new freeformdate filter (takes date or string)

--- a/ervin/templates/edition_bib.html
+++ b/ervin/templates/edition_bib.html
@@ -12,6 +12,6 @@
 <abbr class="unapi-id" title="{{ edition.work.slug }}"/>
 {{ edition.publisher|with_terminal:":" }}
 
-{{ edition.date|date:"j F Y"|with_terminal:"." }}
+{{ edition.date|freeformdate|with_terminal:"." }}
 {{ edition.description|with_terminal:"." }}
 
