--- a/ervin/templates/physicaledition_list.html
+++ b/ervin/templates/physicaledition_list.html
@@ -1,10 +1,3 @@
-{% extends "plain.html" %}
-{% load ervin %}
+{% extends "edition_list.html" %}
+
 {% block title %}Physical Editions{% endblock %}
-{% block content %}
-<ul>
-{% for ed in physicaledition_list %}
-  <li><a href="{{ ed.get_absolute_url }}">{{ ed }}</a></li>
-{% endfor %}
-</ul>
-{% endblock %}
