--- a/ervin/templates/concept_list.html
+++ b/ervin/templates/concept_list.html
@@ -1,12 +1,3 @@
-{% extends "plain.html" %}
-{% load ervin %}
-{% block title %}Concepts{% endblock %}
-{% block content %}
+{% extends "subject_list.html" %}
 
-<ul>
-{% for concept in concept_list %}
-<li><a href="{{ concept.get_absolute_url }}">{{ concept }}</a>
-</li>
-{% endfor %}
-</ul>
-{% endblock %}
+{% block title %}Concepts{% endblock %}
