--- a/ervin/templates/event_list.html
+++ b/ervin/templates/event_list.html
@@ -1,12 +1,3 @@
-{% extends "plain.html" %}
-{% load ervin %}
-{% block title %}Events{% endblock %}
-{% block content %}
+{% extends "subject_list.html" %}
 
-<ul>
-{% for event in event_list %}
-<li><a href="{{ event.get_absolute_url }}">{{ event }}</a>
-</li>
-{% endfor %}
-</ul>
-{% endblock %}
+{% block title %}Events{% endblock %}
