--- a/ervin/templates/object_list.html
+++ b/ervin/templates/object_list.html
@@ -1,12 +1,3 @@
-{% extends "plain.html" %}
-{% load ervin %}
-{% block title %}Objects{% endblock %}
-{% block content %}
+{% extends "subject_list.html" %}
 
-<ul>
-{% for object in frbrobject_list %}
-<li><a href="{{ object.get_absolute_url }}">{{ object }}</a>
-</li>
-{% endfor %}
-</ul>
-{% endblock %}
+{% block title %}Objects{% endblock %}
