--- a/ervin/templates/place_list.html
+++ b/ervin/templates/place_list.html
@@ -1,10 +1,3 @@
-{% extends "plain.html" %}
-{% load ervin %}
+{% extends "subject_list.html" %}
+
 {% block title %}Places{% endblock %}
-{% block content %}
-<ul>
-{% for place in place_list %}
-  <li><a href="{{ place.get_absolute_url }}">{{ place }}</a></li>
-{% endfor %}
-</ul>
-{% endblock %}
