make into a short display

--- a/ervin/templates/ol_edition_bib.html
+++ b/ervin/templates/ol_edition_bib.html
@@ -1,118 +1,2 @@
 {% load ervin %}
-
-<h1 class="title">
-{{ edition.title }}{% if edition.subtitle %}:
-{{edition.subtitle}} {% endif %}
-</h1>
-
-<p>
-{% if edition.authors %}
-<strong>Authors:</strong>
-{{ edition.authors|join:", " }}
-<br />
-{% endif %}
-
-{% if edition.publish_places %}
-<strong>Place:</strong>
-{{ edition.publish_places|join:", " }}
-<br />
-{% endif %}
-
-{% if edition.publishers %}
-<strong>Publishers:</strong>
-{{ edition.publishers|join:", " }}
-<br />
-{% endif %}
-
-{% if edition.languages %}
-<strong>Languages:</strong>
-{{ edition.languages|join:", " }}
-<br />
-{% endif %}
-
-{% if edition.weight %}
-<strong>Weight:</strong>
-{{ edition.weight }}
-<br />
-{% endif %}
-
-{% if edition.number_of_pages %}
-<strong>No. of pages:</strong>
-{{ edition.number_of_pages }}
-<br />
-{% endif %}
-
-{% if edition.pagination %}
-<strong>Pagination:</strong>
-{{ edition.pagination }}
-<br />
-{% endif %}
-
-
-{% if edition.isbn_13 %}
-<strong>ISBN (13):</strong>
-{{ edition.isbn_13|join:", " }}
-<br />
-{% endif %}
-
-{% if edition.physical_format %}
-<strong>Format:</strong>
-{{ edition.physical_format }}
-<br />
-{% endif %}
-
-{% if edition.physical_date %}
-<strong>Date:</strong>
-{{ edition.physical_date }}
-<br />
-{% endif %}
-
-{% if edition.publish_date %}
-<strong>Date (published):</strong>
-{{ edition.publish_date }}
-<br />
-{% endif %}
-
-{% if edition.physical_dimension %}
-<strong>Dimension:</strong>
-{{ edition.physical_dimension }}
-<br />
-{% endif %}
-
-{% if edition.table_of_contents %}
-<strong>Table of contents:</strong>
-{{ edition.table_of_contents.0.value }}
-<br />
-{% endif %}
-
-{% if edition.edition_name %}
-<strong>Edition name:</strong>
-{{ edition.edition_name }}
-<br />
-{% endif %}
-
-{% if edition.series %}
-<strong>Series:</strong>
-{{ edition.series|join:"," }}
-<br />
-{% endif %}
-
-{% if edition.contributions %}
-<strong>Contributions:</strong>
-{{ edition.contributions|join:", " }}
-<br />
-{% endif %}
-
-{% if edition.publish_country %}
-<strong>Country:</strong>
-{{ edition.publish_country }}
-<br />
-{% endif %}
-
-{% if edition.by_statement %}
-<strong>Responsibility:</strong>
-{{ edition.by_statement }}
-<br />
-{% endif %}
-
-</p>
+<a href="{{ edition.olkey }}">{{ edition.title }}</a>
