--- a/ervin/templates/edition_quickbib.html
+++ b/ervin/templates/edition_quickbib.html
@@ -9,4 +9,4 @@
 {% else %}
   <a href="{{ edition.get_absolute_url }}"><cite>{{ edition.title }}</cite></a>.
 {% endif %}
-{% if edition.is_image %}[Image]{% endif %}
+{% ifequal edition.form "image"  %}<img src="/images/icons/image.gif" />{% endifequal %}
