--- a/ervin/templates/edition_quickbib.html
+++ b/ervin/templates/edition_quickbib.html
@@ -7,5 +7,4 @@
 {% if edition_nolink %}
   <cite>{{ edition.title }}</cite>.
 {% else %}
-  <a href="{{ edition.get_absolute_url }}"><cite>{{ edition.title }}</cite></a>.
-{% endif %}&nbsp;{% ifequal edition.work.form "image" %}<img src="/images/icons/image.gif" />{% endifequal %}
+  <a href="{{ edition.get_absolute_url }}"><cite>{{ edition.title }}</cite></a>.{% endif %}{% ifequal edition.work.form "image" %}&nbsp;<img src="/images/icons/image.gif" />{% endifequal %}
