--- a/ervin/templates/work_list.html
+++ b/ervin/templates/work_list.html
@@ -2,9 +2,13 @@
 {% load ervin %}
 {% block title %}Work{% endblock %}
 {% block content %}
+{% if work_list %}
 <ul>
-{% for work in work_list %}
+  {% for work in work_list %}
   <li><a href="{{ work.get_absolute_url }}">{{ work }}</a></li>
-{% endfor %}
+  {% endfor %}
 </ul>
+{% else %}
+<p>No works.</p>
+{% endif %}
 {% endblock %}
