change block title to block html_title

--- a/ervin/templates/event.html
+++ b/ervin/templates/event.html
@@ -1,6 +1,6 @@
 {% extends "plain.html" %}
 {% load ervin %}
-{% block title %}Event: {{ event }}{% endblock %}
+{% block html_title %}Event: {{ event }}{% endblock %}
 {% block content %}
 
 <p>Event: {{ event }}</p>
