--- a/ervin/templates/expression.html
+++ b/ervin/templates/expression.html
@@ -1,6 +1,6 @@
 {% extends "plain.html" %}
 {% load ervin %}
-{% block title %}{{expresion.work.title}}{% endblock %}
+{% block html_title %}{{expresion.work.title}}{% endblock %}
 {% block content %}
 
 <dl>
