--- a/ervin/templates/organization.html
+++ b/ervin/templates/organization.html
@@ -1,6 +1,6 @@
 {% extends "plain.html" %}
 {% load ervin %}
-{% block title %}Organization: {{ organization }}{% endblock %}
+{% block html_title %}Organization: {{ organization }}{% endblock %}
 {% block content %}
 
 <p>Organization: {{ organization }}</p>
