--- a/ervin/templates/place.html
+++ b/ervin/templates/place.html
@@ -1,6 +1,6 @@
 {% extends "plain.html" %}
 {% load ervin %}
-{% block title %}Place: {{ place }}{% endblock %}
+{% block html_title %}Place: {{ place }}{% endblock %}
 {% block content %}
 
 <p>Place: {{ place }}</p>
