--- a/ervin/templates/subject_list.html
+++ b/ervin/templates/subject_list.html
@@ -2,7 +2,7 @@
 
 {% load ervin %}
 
-{% block title %}Subjects{% endblock %}
+{% block html_title %}Subjects{% endblock %}
 
 {% block content %}
 <ul>
