--- a/ervin/templates/concept.html
+++ b/ervin/templates/concept.html
@@ -1,6 +1,6 @@
 {% extends "plain.html" %}
 {% load ervin %}
-{% block title %}Concept: {{ concept }}{% endblock %}
+{% block html_title %}Concept: {{ concept }}{% endblock %}
 {% block content %}
 
 <p>Concept: {{ concept }}</p>
