--- a/ervin/templates/edition_list.html
+++ b/ervin/templates/edition_list.html
@@ -1,6 +1,6 @@
 {% extends "plain.html" %}
 {% load ervin %}
-{% block title %}Editions{% endblock %}
+{% block html_title %}Editions{% endblock %}
 {% block content %}
 <ul>
 {% for edition in edition_list %}
