--- a/ervin/templates/home.html
+++ b/ervin/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "plain.html" %}
 {% load ervin %}
-{% block title %}{{person}}{% endblock %}
+{% block html_title %}{{person}}{% endblock %}
 {% block content %}
 
 <ul>
