--- a/ervin/templates/object.html
+++ b/ervin/templates/object.html
@@ -1,6 +1,6 @@
 {% extends "plain.html" %}
 {% load ervin %}
-{% block title %}Object: {{ frbrobject }}{% endblock %}
+{% block html_title %}Object: {{ frbrobject }}{% endblock %}
 {% block content %}
 
 <p>Object: {{ frbrobject }}</p>
