--- a/ervin/templates/organization_list.html
+++ b/ervin/templates/organization_list.html
@@ -1,3 +1,3 @@
 {% extends "subject_list.html" %}
 
-{% block title %}Organizations{% endblock %}
+{% block html_title %}Organizations{% endblock %}
