--- a/ervin/templates/physicaledition.html
+++ b/ervin/templates/physicaledition.html
@@ -1,6 +1,6 @@
 {% extends "plain.html" %}
 {% load ervin %}
-{% block title %}Physical edition: {{ edition.title }}{% endblock %}
+{% block html_title %}Physical edition: {{ edition.title }}{% endblock %}
 {% block content %}
 <abbr class="unapi-id" title="{{ edition.pk }}"/>
 <dl>
