--- a/ervin/templates/physicaledition_list.html
+++ b/ervin/templates/physicaledition_list.html
@@ -1,3 +1,3 @@
 {% extends "edition_list.html" %}
 
-{% block title %}Physical Editions{% endblock %}
+{% block html_title %}Physical Editions{% endblock %}
