--- a/ervin/templates/plain.html
+++ b/ervin/templates/plain.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>{% block title %}Ervin{% endblock %}</title>
+    <title>{% block html_title %}Ervin{% endblock %}</title>
     <link rel="unapi-server" type="application/xml"
           title="unAPI" href="/unapi" />
   </head>
