--- a/ervin/templates/work.html
+++ b/ervin/templates/work.html
@@ -1,6 +1,6 @@
 {% extends "plain.html" %}
 {% load ervin %}
-{% block title %}{{work.title}}{% endblock %}
+{% block html_title %}{{work.title}}{% endblock %}
 {% block content %}
 
 <dl>
