--- a/ervin/templates/work_list.html
+++ b/ervin/templates/work_list.html
@@ -1,6 +1,6 @@
 {% extends "plain.html" %}
 {% load ervin %}
-{% block title %}Work{% endblock %}
+{% block html_title %}Work{% endblock %}
 {% block content %}
 {% if work_list %}
 <ul>
