--- a/ervin/templates/organization_list.html
+++ b/ervin/templates/organization_list.html
@@ -1,3 +1,5 @@
 {% extends "subject_list.html" %}
 
 {% block html_title %}Organizations{% endblock %}
+{% block title %}Organizations{% endblock %}
+
