--- a/ervin/templates/work.html
+++ b/ervin/templates/work.html
@@ -3,14 +3,23 @@
 {% block html_title %}{{work.title}}{% endblock %}
 {% block content %}
 
-<dl>
-<dt>Work title</dt><dd>{{ work.title }}</dd>
-<dt>Work authors</dt><dd>{{ work.authors.all|inverted_name_first_list}}</dd>
-</dl>
-<p>Multiple expressions</p>
-<ul>
-{% for expression in work.expression_set.all %}
-<li><a href="{{expression.get_absolute_url}}">{{ expression}}</a></li>
-{% endfor %}
-</ul>
-{% endblock %}
+<div about="{{work.get_absolute_url}}" >
+  <dl>
+    <dt>Work title</dt><dd property="dc:Title">{{ work.title }}</dd>
+    <dt>Work authors</dt>
+    <dd>
+      <ul>
+        {% for author in work.authors.all %}
+        <li xmlns="dc:Author">{{ author | inverted_name }}</li>
+        {% endfor %}
+      </ul>
+    </dd>
+  </dl>
+  <p>Multiple expressions</p>
+  <ul>
+    {% for expression in work.expression_set.all %}
+    <li><a href="{{expression.get_absolute_url}}">{{ expression}}</a></li>
+    {% endfor %}
+  </ul>
+  {% endblock %}
+</div>
