move all ervin templates to ervin/..., includes to ervin/includes/...

--- a/ervin/templates/ervin/includes/edition_summary.html
+++ b/ervin/templates/ervin/includes/edition_summary.html
@@ -2,7 +2,7 @@
 {% load typogrify %}
 {% filter typogrify %}
 <div>
-  <p>{% include "edition_bib.html" %}</p>
+  <p>{% include "ervin/includes/edition_bib.html" %}</p>
   {% if edition.work.description %}
   <div class="description">
     <p>{{edition.work.description}}</p>
