--- a/ervin/templates/ervin/organization.html
+++ b/ervin/templates/ervin/organization.html
@@ -1,4 +1,4 @@
-{% extends "plain.html" %}
+{% extends "ervin/plain.html" %}
 {% load ervin %}
 {% block html_title %}Organization: {{ organization }}{% endblock %}
 {% block content %}
