--- a/ervin/templates/ervin/object.html
+++ b/ervin/templates/ervin/object.html
@@ -1,4 +1,4 @@
-{% extends "plain.html" %}
+{% extends "ervin/plain.html" %}
 {% load ervin %}
 {% block html_title %}Object: {{ frbrobject }}{% endblock %}
 {% block content %}
