--- a/ervin/templates/ervin/onlineedition.html
+++ b/ervin/templates/ervin/onlineedition.html
@@ -1,4 +1,4 @@
-{% extends "plain.html" %}
+{% extends "ervin/plain.html" %}
 {% load ervin %}
 {% block html_title %}Online edition: {{ edition.title }}{% endblock %}
 {% block content %}
