ervin/plain.html -> ervin/base.html

--- a/ervin/templates/ervin/expression.html
+++ b/ervin/templates/ervin/expression.html
@@ -1,4 +1,4 @@
-{% extends "ervin/plain.html" %}
+{% extends "ervin/base.html" %}
 {% load ervin %}
 {% block html_title %}{{expresion.work.title}}{% endblock %}
 {% block content %}
