--- a/ervin/templates/ervin/place.html
+++ b/ervin/templates/ervin/place.html
@@ -1,4 +1,4 @@
-{% extends "ervin/plain.html" %}
+{% extends "ervin/base.html" %}
 {% load ervin %}
 {% block html_title %}Place: {{ place }}{% endblock %}
 {% block content %}
