fix extends for subject_list

--- a/ervin/templates/ervin/person_list.html
+++ b/ervin/templates/ervin/person_list.html
@@ -1,4 +1,4 @@
-{% extends "subject_list.html" %}
+{% extends "ervin/subject_list.html" %}
 
 {% block html_title %}Persons{% endblock %}
 {% block title %}Persons{% endblock %}
