--- a/ervin/templates/ervin/concept_list.html
+++ b/ervin/templates/ervin/concept_list.html
@@ -1,4 +1,4 @@
-{% extends "subject_list.html" %}
+{% extends "ervin/subject_list.html" %}
 
 {% block html_title %}Concepts{% endblock %}
 {% block title %}Concepts{% endblock %}
