--- a/ervin/templates/ervin/object_list.html
+++ b/ervin/templates/ervin/object_list.html
@@ -1,4 +1,4 @@
-{% extends "subject_list.html" %}
+{% extends "ervin/subject_list.html" %}
 
 {% block html_title %}Objects{% endblock %}
 {% block title %}Objects{% endblock %}
