--- a/ervin/templates/ervin/place_list.html
+++ b/ervin/templates/ervin/place_list.html
@@ -1,4 +1,4 @@
-{% extends "subject_list.html" %}
+{% extends "ervin/subject_list.html" %}
 
 {% block html_title %}Places{% endblock %}
 {% block title %}Places{% endblock %}
