add make_columns template tag, change ervin (template tags) to ervintags

--- a/ervin/templates/ervin/organization.html
+++ b/ervin/templates/ervin/organization.html
@@ -1,5 +1,5 @@
 {% extends "ervin/base.html" %}
-{% load ervin %}
+{% load ervintags %}
 {% block html_title %}Organization: {{ organization }}{% endblock %}
 {% block content %}
 
