--- a/ervin/templates/ervin/physicaledition.html
+++ b/ervin/templates/ervin/physicaledition.html
@@ -1,5 +1,5 @@
 {% extends "ervin/base.html" %}
-{% load ervin %}
+{% load ervintags %}
 {% block html_title %}Physical edition: {{ edition.title }}{% endblock %}
 {% block content %}
 <abbr class="unapi-id" title="{{ edition.pk }}"/>
