--- a/ervin/templates/ervin/object.html
+++ b/ervin/templates/ervin/object.html
@@ -1,5 +1,5 @@
 {% extends "ervin/base.html" %}
-{% load ervin %}
+{% load ervintags %}
 {% block html_title %}Object: {{ frbrobject }}{% endblock %}
 {% block content %}
 
