use ervintags, not ervin for template tag library

--- a/ervin/templates/ervin/includes/edition_bib.html
+++ b/ervin/templates/ervin/includes/edition_bib.html
@@ -1,4 +1,4 @@
-{% load ervin %}
+{% load ervintags %}
 {# variables #}
 {#  edition #}
 {#  edition_nolink : true if we should not link the edition #}
