--- a/ervin/templates/ervin/includes/edition_quickbib.html
+++ b/ervin/templates/ervin/includes/edition_quickbib.html
@@ -1,4 +1,4 @@
-{% load ervin %}
+{% load ervintags %}
 {# variables #}
 {#  edition #}
 {#  edition_nolink : true if we should not link the edition #}
