--- a/ervin/templates/ervin/work_list.html
+++ b/ervin/templates/ervin/work_list.html
@@ -1,5 +1,5 @@
 {% extends "ervin/base.html" %}
-{% load ervin %}
+{% load ervintags %}
 {% block html_title %}Work{% endblock %}
 {% block content %}
 {% if work_list %}
