add block for empty list message

--- a/ervin/templates/ervin/subject_list.html
+++ b/ervin/templates/ervin/subject_list.html
@@ -13,6 +13,6 @@
   {% endfor %}
 </ul>
 {% else %}
-<p>No subjects.</p>
+{% block empty_list %}<p>No subjects.</p>{% endblock %}
 {% endif %}
 {% endblock %}
