--- a/ervin/templates/ervin/work_list.html
+++ b/ervin/templates/ervin/work_list.html
@@ -1,14 +1,7 @@
-{% extends "ervin/base.html" %}
+{% extends "ervin/subject_list.html" %}
+
 {% load ervintags %}
+
 {% block html_title %}Work{% endblock %}
-{% block content %}
-{% if work_list %}
-<ul>
-  {% for work in work_list %}
-  <li><a href="{{ work.get_absolute_url }}">{{ work }}</a></li>
-  {% endfor %}
-</ul>
-{% else %}
-<p>No works.</p>
-{% endif %}
-{% endblock %}
+
+{% block title %}Work{% endblock %}
