--- a/ervin/templates/solango/edition_search.html
+++ b/ervin/templates/solango/edition_search.html
@@ -1,7 +1,7 @@
 <div class="searchdocument">
 <h3>
   {% autoescape off %}
-  {% include "edition_quickbib.html" %}
+  {% include "ervin/includes/edition_quickbib.html" %}
   {% endautoescape %}
 </h3>
 <p>
