add more info to front page

--- a/ervin/templates/ervin/home.html
+++ b/ervin/templates/ervin/home.html
@@ -3,6 +3,11 @@
 {% block html_title %}{{person}}{% endblock %}
 {% block content %}
 
+<h1>It worked!</h1>
+
+<p>Welcome to your new installation of Ervin - the CMS for
+perfectionists with metadata!</p>
+
 <ul>
 <h1>Group 1</h1>
 <li><a href="/works">Works</a></li>
