replace authors with creators everywhere

--- a/ervin/templates/ervin/expression.html
+++ b/ervin/templates/ervin/expression.html
@@ -5,6 +5,6 @@
 
 <dl>
 <dt>Work title</dt><dd>{{ expression.work.title }}</dd>
-<dt>Work authors</dt><dd>{{ expression.work.authors.all|inverted_name_first_list}}</dd>
+<dt>Work authors</dt><dd>{{ expression.work.creators.all|inverted_name_first_list}}</dd>
 </dl>
 {% endblock %}
