--- a/ervin/templates/ervin/work.html
+++ b/ervin/templates/ervin/work.html
@@ -1,25 +1,12 @@
-{% extends "ervin/base.html" %}
+{% extends "ervin/g1_entity.html" %}
 {% load ervintags %}
-{% block html_title %}{{work.title}}{% endblock %}
-{% block content %}
 
-<div about="{{work.get_absolute_url}}" >
-  <dl>
-    <dt>Work title</dt><dd property="dc:title">{{ work.title }}</dd>
-    <dt>Work authors</dt>
-    <dd>
-      <ul>
-        {% for creator in work.creators.all %}
-        <li xmlns="dc:creator">{{ creator|inverted_name }}</li>
-        {% endfor %}
-      </ul>
-    </dd>
-  </dl>
-  <p>Multiple expressions</p>
-  <ul>
-    {% for expression in work.expression_set.all %}
-    <li><a href="{{expression.get_absolute_url}}">{{ expression}}</a></li>
-    {% endfor %}
-  </ul>
-  {% endblock %}
-</div>
+{% block rest %}
+<p>Multiple expressions</p>
+<ul>
+  {% for expression in entity.expression_set.all %}
+  <li><a href="{{expression.get_absolute_url}}">{{ expression}}</a></li>
+  {% endfor %}
+</ul>
+{% endblock %}
+
