--- a/ervin/templates/ervin/g1_entity.html
+++ b/ervin/templates/ervin/g1_entity.html
@@ -16,7 +16,8 @@
       </ul>
     </dd>
     {% if entity.subjects %}
-    <dt>Subjects:</dt> <dd>
+    <dt>Subjects:</dt>
+    <dd>
       <ul>
         {% for subject in entity.subjects.all %}
         <li>{{ subject }}</li>
