--- a/ervin/templates/ervin/base.html
+++ b/ervin/templates/ervin/base.html
@@ -13,7 +13,8 @@
           title="unAPI" href="/unapi" />
   </head>
   <body>
-    {% block content %}
-    {% endblock %}
+    {% block content_header %}{% endblock %}
+    {% block content %}{% endblock %}
+    {% block content_footer %}{% endblock %}
   </body>
 </html>
