--- a/ervin/templates/ervin/onlineedition_image.html
+++ b/ervin/templates/ervin/onlineedition_image.html
@@ -1,6 +1,10 @@
 {% extends "ervin/onlineedition.html" %}
 {% load ervintags %}
 
+{% block content_header %}
+<h1>Online edition (image)</h1>
+{% endblock content_header %}
+
 {% block edition_content %}
 <p><img src="{{ entity.image.get_absolute_url}}" /></p>
 {% endblock %}
