--- a/ervin/templates/ervin/work.html
+++ b/ervin/templates/ervin/work.html
@@ -1,6 +1,10 @@
 {% extends "ervin/g1_entity.html" %}
 {% load ervintags %}
 
+{% block content_header %}
+<h1>Work</h1>
+{% endblock content_header %}
+
 {% block rest %}
 <p>Multiple expressions</p>
 <ul>
